--- a/styles/globals.css
+++ b/styles/globals.css
@@ -557,9 +557,11 @@ input {
 }
 
 /*
+************************
 
 Reused and custom styles
-  
+
+************************
 */
 
 .icon--scaled svg {
@@ -571,6 +573,12 @@ Reused and custom styles
   width: 100%;
   height: 100%;
 }
+
+/* 
+
+Selected section
+
+*/
 
 .selected__audio-icon svg {
   width: 100%;
@@ -586,6 +594,40 @@ Reused and custom styles
 
 .selected__custom-width {
   width: calc((100% / 3) * 2);
+}
+
+/* 
+
+Search bar Results
+
+*/
+
+.search__books--wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 440px;
+  width: 100%;
+  max-height: 640px;
+  margin-left: auto;
+  overflow-y: auto;
+  padding: 16px;
+  position: absolute;
+  top: 104px;
+  right: 24px;
+  background-color: #fff;
+  border: 1px solid #e1e7ea;
+  box-shadow: 0 0 6px 0 rgba(0,0,0,.14);
+}
+
+
+/* 
+
+Player page custom height
+
+*/
+
+.player__sidebar--height {
+  height: calc(100vh - 130px);
 }
 
 .summary__custom-width {
@@ -609,51 +651,112 @@ Reused and custom styles
   width: calc(100% / 3);
 }
 
+.plan__header--wrapper::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-color: #032b41;
+  border-bottom-right-radius: 16rem;
+  border-bottom-left-radius: 16rem;
+}
+
 /* 
 
-Custom Input range 
+choose-plan page
+
+*/
+
+.activeChosenPremium {
+  @apply flex mx-auto max-w-[680px] gap-6 p-6 bg-[#f1f6f4] border-4 rounded cursor-pointer border-[#2be080];
+}
+
+.chosenPremium {
+  @apply flex mx-auto max-w-[680px] gap-6 p-6 bg-[#f1f6f4] border-4 rounded cursor-pointer border-[#bac8ce];
+}
+
+
+/* 
+
+Accordion section
+
+*/
+
+.accordion__card {
+  @apply border-b border-[#ddd] overflow-hidden
+}
+
+.accordion__header {
+  @apply flex justify-between items-center gap-2 py-6 cursor-pointer
+}
+
+.accordion__title {
+  @apply relative mb-0 font-medium text-2xl text-[#032b41] duration-300 
+}
+
+.accordion__icon--rotate {
+  @apply duration-300 rotate-180
+}
+
+.accordion__icon--return {
+  @apply duration-300 rotate-[-180]
+}
+
+.accordion__body {
+  @apply min-h-[1px] pb-6 text-[#394547] leading-normal
+}
+
+.collapse {
+  @apply relative overflow-hidden h-0 duration-300 ease-out
+}
+
+/* 
+
+Audio section custom input range 
 
 */
 
 input[type="range"] {
-    --range-progress: 0;
-    -webkit-appearance: none;
-    appearance: none;
-    position: relative;
-    background: #ccc;
-    width: 100%;
-    height: 2px;
-    border-radius: 2px;
-    cursor: pointer;
-  }
-  
-  /* played progress length */
-  input[type="range"]::before {
-    content: "";
-    height: 2px;
-    background: #2BD97C;
-    width: var(--range-progress);
-    border-bottom-left-radius: 2px;
-    border-top-left-radius: 2px;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  
-  /* slider thumb */
-  input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    height: 8px;
-    width: 8px;
-    border-radius: 50%;
-    border: none;
-    background-color: #2BD97C;
-    cursor: pointer;
-    position: relative;
-  }
-  
-  /* dragging thumb */
-  input[type="range"]:active::-webkit-slider-thumb {
-    transform: scale(1.2);
-  }
-  
+  --range-progress: 0;
+  -webkit-appearance: none;
+  appearance: none;
+  position: relative;
+  background: #ccc;
+  width: 100%;
+  height: 2px;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+/* played progress length not showing, needs fix */
+input[type="range"]::before {
+  content: "";
+  height: 2px;
+  background: #2bd97c;
+  width: var(--range-progress);
+  border-bottom-left-radius: 2px;
+  border-top-left-radius: 2px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* slider thumb */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  border: none;
+  background-color: #2bd97c;
+  cursor: pointer;
+  position: relative;
+}
+
+/* dragging thumb */
+input[type="range"]:active::-webkit-slider-thumb {
+  transform: scale(1.2);
+}
