--- a/styles/globals.css
+++ b/styles/globals.css
@@ -651,6 +651,13 @@ Player page custom height
   width: calc(100% / 3);
 }
 
+@media (max-width:768px) {
+  .track--wrapper > div {
+    width: 100%;
+    justify-content: center;
+  }
+}
+
 .plan__header--wrapper::before {
   content: "";
   position: absolute;
@@ -666,6 +673,41 @@ Player page custom height
 
 /* 
 
+Skeleton loading state
+
+*/
+
+/* skelton box */
+
+.skeleton-box {
+  display: inline-block;
+  height: 1em;
+  position: relative;
+  overflow: hidden;
+  background-color: #dddbdd;
+}
+
+.skeleton-box::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0,
+    rgba(255, 255, 255, 0.2) 20%,
+    rgba(255, 255, 255, 0.5) 60%,
+    rgba(255, 255, 255, 0)
+  );
+  -webkit-animation: shimmer 2s infinite;
+  animation: shimmer 2s infinite;
+  content: "";
+}
+
+/* 
+
 choose-plan page
 
 */
@@ -677,7 +719,6 @@ choose-plan page
 .chosenPremium {
   @apply flex mx-auto max-w-[680px] gap-6 p-6 bg-[#f1f6f4] border-4 rounded cursor-pointer border-[#bac8ce];
 }
-
 
 /* 
 
@@ -711,52 +752,4 @@ Accordion section
 
 .collapse {
   @apply relative overflow-hidden h-0 duration-300 ease-out
-}
-
-/* 
-
-Audio section custom input range 
-
-*/
-
-input[type="range"] {
-  --range-progress: 0;
-  -webkit-appearance: none;
-  appearance: none;
-  position: relative;
-  background: #ccc;
-  width: 100%;
-  height: 2px;
-  border-radius: 2px;
-  cursor: pointer;
-}
-
-/* played progress length not showing, needs fix */
-input[type="range"]::before {
-  content: "";
-  height: 2px;
-  background: #2bd97c;
-  width: var(--range-progress);
-  border-bottom-left-radius: 2px;
-  border-top-left-radius: 2px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-/* slider thumb */
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  height: 8px;
-  width: 8px;
-  border-radius: 50%;
-  border: none;
-  background-color: #2bd97c;
-  cursor: pointer;
-  position: relative;
-}
-
-/* dragging thumb */
-input[type="range"]:active::-webkit-slider-thumb {
-  transform: scale(1.2);
 }
