--- a/styles/globals.css
+++ b/styles/globals.css
@@ -708,6 +708,81 @@ Skeleton loading state
 
 /* 
 
+Spinning loader
+
+*/
+
+.spinLoad {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.spinLoad div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #032b41;
+  border-radius: 50%;
+  animation: spinLoad 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #032b41 transparent transparent transparent;
+}
+.spinLoad div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.spinLoad div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.spinLoad div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes spinLoad {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spinLoad--auth {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.spinLoad--auth div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  margin: 8px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  animation: spinLoad 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.spinLoad--auth div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.spinLoad--auth div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.spinLoad--auth div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+
+/* 
+
 choose-plan page
 
 */
